tests/specs/check/typecheck_doc_in_markdown/markdown.out
Check [WILDCARD]/markdown.md$11-14.js
Check [WILDCARD]/markdown.md$17-20.ts
Check [WILDCARD]/markdown.md$29-32.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const a: string = 42;
      ^
    at [WILDCARD]/markdown.md$29-32.ts:1:7
